<resources>
    <string name="app_name">Semear</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_search">Pesquisar</string>

    <string name="all_rooms">Todas as Salas</string>
    <string name="n1_am">N1 Manhã</string>
    <string name="n1_pm">N1 Noite</string>
    <string name="n2_am">N2 Manhã</string>
    <string name="n2_pm">N2 Noite</string>
    <string name="n3_am">N3 Manhã</string>
    <string name="n3_pm">N3 Noite</string>
    <string name="n4_am">N4 Manhã</string>
    <string name="n4_pm">N4 Noite</string>
    <string name="n5_am">N5 Manhã</string>
    <string name="n5_pm">N5 Noite</string>
    <string name="n6_am">N6 Manhã</string>
    <string name="n6_pm">N6 Noite</string>

    <string name="all_chalets">Todos os Chalés</string>
    <string name="chalet3_am">Chalé 3 Manhã</string>
    <string name="chalet3_pm">Chalé 3 Noite</string>
    <string name="chalet4_am">Chalé 4 Manhã</string>
    <string name="chalet4_pm">Chalé 4 Noite</string>
    <string name="chalet5_am">Chalé 5 Manhã</string>
    <string name="chalet5_pm">Chalé 5 Noite</string>
    <string name="chalet6_am">Chalé 6 Manhã</string>
    <string name="chalet6_pm">Chalé 6 Noite</string>
    <string name="chalet7_am">Chalé 7 Manhã</string>
    <string name="chalet7_pm">Chalé 7 Noite</string>
    <string name="chalet8_am">Chalé 8 Manhã</string>
    <string name="chalet8_pm">Chalé 8 Noite</string>
    <string name="chalet9_am">Chalé 9 Manhã</string>
    <string name="chalet9_pm">Chalé 9 Noite</string>
    <string name="chalet10_am">Chalé 10 Manhã</string>
    <string name="chalet10_pm">Chalé 10 Noite</string>

    <string name="class_dates">Datas</string>
    <string name="infos">Informações</string>
    <string name="reports">Relatórios</string>
    <string name="menu_refresh">Atualizar</string>
    <string name="about">Sobre</string>
    <string name="image_description_kid_icon">Criança</string>
    <string name="image_description_arrow_icon">Registro</string>
    <string name="no_kids">Nenhuma criança foi adicionada ainda.</string>
    <string name="kid_added">Registro adicionado.</string>
    <string name="kid_updated">Registro atualizado.</string>
    <string name="kid_deleted">Registro removido.</string>

    <!-- Strings related to start -->
    <string name="babies">Semear Bebês</string>
    <string name="ebi_ci">EBI/CI</string>
    <string name="management">Gestão</string>

    <!-- Strings related to management -->
    <string name="from">De:</string>
    <string name="to">Até:</string>
    <string name="birth">Nascimento:</string>
    <string name="room">Sala:</string>
    <string name="chalet">Chalé:</string>
    <string name="seed_baby">Semear Bebês</string>
    <string name="seed_kid">Crianças de 4 a 11 anos</string>
    <string name="save">Salvar</string>

    <!-- Strings related to register -->
    <string name="title_register">Novo Registro</string>
    <string name="title_update">Atualizar Registro</string>
    <string name="kid_name">Nome da criança</string>
    <string name="sponsor_name">Nome do responsável</string>
    <string name="sponsor_email">Email do responsável</string>
    <string name="city">Cidade</string>
    <string name="address">Endereço</string>
    <string name="class_room">Sala</string>
    <string name="church_name">Nome da igreja</string>
    <string name="allergy">Alergia</string>
    <string name="cell_phone">Celular</string>
    <string name="boy">Menino</string>
    <string name="girl">Menina</string>
    <string name="can_leave">Pode sair? </string>
    <string name="church">Frequenta alguma igreja? </string>
    <string name="will_return">Pretende voltar? </string>
    <string name="birth_date">Data de aniversário</string>
    <string name="action_register">Registrar</string>
    <string name="action_update">Atualizar</string>
    <string name="error_field_invalid">Verifique este campo</string>
    <string name="error_field_required">Este campo é obrigatório</string>
</resources>
