<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/all_rooms" />
        <item
            android:id="@+id/nav_n1_am"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/n1_am" />
        <item
            android:id="@+id/nav_n1_pm"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/n1_pm" />
        <item
            android:id="@+id/nav_n2_am"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/n2_am" />
        <item
            android:id="@+id/nav_n2_pm"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/n2_pm" />
        <item
            android:id="@+id/nav_n3_am"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/n3_am" />
        <item
            android:id="@+id/nav_n3_pm"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/n3_pm" />
        <item
            android:id="@+id/nav_n4_am"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/n4_am" />
        <item
            android:id="@+id/nav_n4_pm"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/n4_pm" />
        <item
            android:id="@+id/nav_n5_am"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/n5_am" />
        <item
            android:id="@+id/nav_n5_pm"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/n5_pm" />
        <item
            android:id="@+id/nav_n6_am"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/n6_am" />
        <item
            android:id="@+id/nav_n6_pm"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/n6_pm" />

    </group>

    <item android:title="@string/reports">
        <menu>
            <item
                android:id="@+id/nav_dates"
                android:icon="@android:drawable/ic_menu_agenda"
                android:title="@string/class_dates" />
        </menu>
    </item>

    <item android:title="@string/infos">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
