<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/buttonChalet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:drawableStart="@drawable/ic_library"
        android:text="@string/ebi_ci"
        app:layout_constraintBottom_toTopOf="@id/buttonBabies"
        app:layout_constraintLeft_toLeftOf="@id/buttonBabies"
        app:layout_constraintRight_toRightOf="@id/buttonBabies" />

    <Button
        android:id="@+id/buttonBabies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_child"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:text="@string/babies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonManagement"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/ic_work"
        android:text="@string/management"
        app:layout_constraintLeft_toLeftOf="@id/buttonBabies"
        app:layout_constraintRight_toRightOf="@id/buttonBabies"
        app:layout_constraintTop_toBottomOf="@id/buttonBabies" />

</android.support.constraint.ConstraintLayout>